cloud-task-manager-deploy/devops/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: task-manager
  labels:
    app: cloud-task-manager
    environment: production
